fix: missing colors

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -43,7 +43,7 @@ $container: map-get($grid-breakpoints, xl);
 $color-primary: #359960;
 $color-secondary: #FECE3E;
 $color-dark: #194550;
-$color-text: #194550;
+$color-text: #212C04;
 $color-active: #CFA832;
 $color-success: #48BD66;
 $color-warning: #FFD200;
@@ -51,6 +51,7 @@ $color-danger: #E62A2A;
 $color-info: #5BC0DE;
 $color-white: #FFFFFF;
 $color-black: #04080C;
+$color-background: #F3F3F3;
 $color-neutral-300: hsl(36deg 5% 85%);
 $color-neutral-400: hsl(36deg 5% 75%);
 $color-neutral-500: hsl(36deg 5% 62%);
