--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -1,3 +1,3 @@
 .layout{
-    background-color: $color-backgound;
+    background-color: $color-background;
 }
